--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   ],
   "dependencies": {
     "purescript-prelude": "^3.1.0",
+    "purescript-maybe": "^3.0.0",
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
