--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "purescript-prelude": "^3.1.0",
     "purescript-maybe": "^3.0.0",
+    "purescript-tuples": "^4.1.0",
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
