--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "purescript-prelude": "^3.1.0",
     "purescript-maybe": "^3.0.0",
     "purescript-tuples": "^4.1.0",
-    "purescript-newtype": "^2.0.0"
+    "purescript-newtype": "^2.0.0",
+    "purescript-unsafe-coerce": "^3.0.0",
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
