--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "purescript-tuples": "^4.1.0",
     "purescript-newtype": "^2.0.0",
     "purescript-unsafe-coerce": "^3.0.0",
+    "purescript-dom": "^4.8.2"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
