--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "purescript-tuples": "^4.1.0",
     "purescript-newtype": "^2.0.0",
     "purescript-unsafe-coerce": "^3.0.0",
-    "purescript-dom": "^4.8.2"
+    "purescript-dom": "^4.8.2",
+    "purescript-generics-rep": "^5.3.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
